# sked

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  constraints.txt  docker-compose.yml  manage.py  pyproject.toml  requirements.in  requirements.txt  uv  wait-for-host.sh  wait-for-it.sh
.github/workflows/: ci.yml
calendars/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
calendars/migrations/: 0001_initial.py  0002_add_all_day.py  0002_auto_20180101_1657.py  0003_googleuser_refresh_token.py  0003_icalcalendar_person.py  0004_auto_20180101_2130.py  0004_icalcalendar_icaltype.py  0005_auto_20180101_2240.py  0005_icaltype_specify.py  0006_icaltype_non_null.py  0006_mergedcalendar.py  0007_calendaraccess.py  0007_icaltype_longer.py  0008_alter_icalcalendar_icaltype.py
calendars/templates/: about_sked.html  access_view.html  base.html  guide.html  home.html  merged_calendar.html  my_calendar.html  new_bamboo_calendar.html  new_calendar.html  new_merged_calendar.html  new_whosoff_calendar.html  profile.html
calendars/templates/registration/: login.html
calendars/templatetags/: calendar_tags.py
sked/: .gitignore  settings.py  settings_private_example.py  urls.py  wsgi.py
stubs/: icalendar.pyi
stubs/google_auth_oauthlib/: flow.pyi
stubs/googleapiclient/: discovery.pyi
