[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "sked"
requires-python = ">= 3.12"
version = "0.0.1"

[tool.django-stubs]
django_settings_module = "sked.settings"

[tool.flake8]
exclude = ".venv"
max-line-length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
namespace_packages = true
no_implicit_optional = true
plugins = ["mypy_django_plugin.main"]
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.setuptools]
py-modules = []
